--- a/Welcome.html
+++ b/Welcome.html
@@ -1,53 +1,42 @@
-</style>
-<HTML>
-  <body background="Ludovico 1.jpg">
-  <h1>Welcome</h1>
-    </BODY>
-<HTML>
-</HEAD>
-  <BODY>
-    <HEADER>
-      <NAV>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Who are RT9 East IT Services</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+      body {
+        background-image: url("Ludovico 1.jpg");
+        background-size: cover; /* Optional: This scales the image to cover the entire viewport */
+      }
+    </style>
+  </head>
+
+  <body>
+    <header>
+      <nav>
         <ul>
           <li><a href="Home.html">Home</a></li>
           <li><a href="Resume.html">Resume</a></li>
-	  <li><a href="Certificates.html">Certificates</a></li>
+          <li><a href="Certificates.html">Certificates</a></li>
           <li><a href="Contact.html">Contact</a></li>
-            </ul>
-      </NAV>
-    </HEADER>
-    
-</HTML>
-<TITLE>Who are RT9 East IT Services</TITLE>
-</HEAD>
-<BODY>
+        </ul>
+      </nav>
+    </header>
 
-<P>
-<B>RT9 East IT Services</B>
-</P>
+    <h1>Welcome</h1>
 
-<P>
-Welcomes you to their company webpage.
-</P>
+    <p><b>RT9 East IT Services</b></p>
 
-<HTML>
-   <HEAD>
-      <TITLE>HTML Image as link</title>
-   </HEAD>
-   <BODY>
-      Please click on the image below to view my Resume:<br>
+    <p>Welcomes you to their company webpage.</p>
+
+    <p>
+      Please click on the image below to view my Resume:<br />
       <a href="Resume.html">
-         <img alt="Qries" src="Dunkin Me 2.JPG"
-         width=200" height="300">
+        <img alt="Resume link" src="Dunkin Me 2.JPG" width="200" height="300" />
       </a>
-   </BODY>
-</HTML>
+    </p>
 
-</P>
-
-
-</BODY>
-</HTML>
-<P>
-<a href="Home.html">Click here to return to home:</a><br />
+    <p><a href="Home.html">Click here to return to home:</a></p>
+  </body>
+</html>
 
