--- a/Home.html
+++ b/Home.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-
-</style>
-<HTML>
-  <body background="R1-01009-010A.JPG">
-  <h1>Home</h1>
-    </BODY>
-</HTML>
-  <HEAD>
-    <link rel="stylesheet" href="css/style.css">
-  </HEAD>
-  <BODY>
-    <HEADER>
-      <NAV>
+<html>
+  <head>
+    <title>Home</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+      body {
+        background-image: url("R1-01009-010A.JPG");
+        background-size: cover; /* Optional: This scales the image to cover the entire viewport */
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <nav>
         <ul>
           <li><a href="Welcome.html">Welcome</a></li>
           <li><a href="Resume.html">Resume</a></li>
-	  <li><a href="Certificates.html">Certificates</a></li>
+          <li><a href="Certificates.html">Certificates</a></li>
           <li><a href="Contact.html">Contact</a></li>
-            </ul>
-      </NAV>
-    </HEADER>
+        </ul>
+      </nav>
+    </header>
 
-</HTML>
-<P>
-RT9 East IT Services is a dedicated Veteran Owned IT Support and Services Company.
-We are dedicated to helping people find support solutions for our customers.
-</P>
+    <h1>Home</h1>
 
-<a href="Home.html">Click here to return to home:</a><br />
+    <p>
+      RT9 East IT Services is a dedicated Veteran Owned IT Support and Services
+      Company. We are dedicated to helping people find support solutions for our
+      customers.
+    </p>
+
+    <a href="Home.html">Click here to return to home:</a>
+  </body>
+</html>
+
